--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,64 @@
-
 body{
-    font-family: roboto, 'Trebuchet MS';
+    font-family: Roboto, "Trebuchet MS";
 }
 
 .header-lines{
-    position: relative;
-}
-
-
-.lineaArriba{
-    display: flex;
-    background-color: white;
-    justify-content: flex-end;
-    font-size: 12px;
-    
-}
-
-
-
-.lineaAbajo{
-    display: flex;
-    justify-content: space-around;
     background-color: black;
-    font-size: 12px;
-    
 }
 
-.lineaArriba h2{
-    padding: 10px 10px;
+.lineaArriba, .lineaAbajo{
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+    text-align: center;
+
+}
+
+.header-lines h2{
+    padding: 20px 25px ;
+    font-size: 20px;
+    font-weight: 100;
     cursor: pointer;
     margin: 0;
-
+    
 }
 
-.lineaArriba h2:hover{
-    background-color: black;
-    color: white;
-}
-
-.lineaAbajo h2{
-    color: white;
+.header-lines h2:hover{
+    color: black;
+    background-color: white;
 }
 
 .header-lines img{
-    padding: 0;
-    margin: 0;
+    position: absolute;
+    width: 90px;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+}
+
+.portada{
+    
+}
+
+.imagenes-portada{
+    position: relative;
+}
+
+#imagen-portada, #filtro-oscuro{
+    width: 100%;
+    heigth: auto;
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 80px;
+
 }
+
+#filtro-oscuro{
+    background-color: rgba(0, 0, 0, 0.336);
+    z-index: 2;
+}
+
+
+
+
+
