--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,101 @@
 body{
     font-family: Roboto, "Trebuchet MS";
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 .header-lines{
     background-color: black;
+    display: block;
+    color: white;
+
 }
 
-.lineaArriba, .lineaAbajo{
+.lineaArriba{
     display: flex;
     justify-content: flex-end;
-    color: white;
-    text-align: center;
 
 }
 
-.header-lines h2{
-    padding: 20px 25px ;
-    font-size: 20px;
-    font-weight: 100;
-    cursor: pointer;
+.lineaArriba h2, .lineaAbajo h2{
+    font-size: medium;
     margin: 0;
-    
+    font-weight: lighter;
+    padding: 15px 20px;
+
 }
 
-.header-lines h2:hover{
-    color: black;
+.lineaArriba h2:hover, .lineaAbajo h2:hover{
     background-color: white;
+    color: black;
+    cursor: pointer;
+    font-weight: normal;
+
+}
+
+.lineaAbajo{
+    display: flex;
+    justify-content: center;
 }
 
 .header-lines img{
+    width: 80px;
     position: absolute;
-    width: 90px;
-    top: 20px;
-    left: 20px;
+    top: 0;
     cursor: pointer;
 }
 
 .portada{
     
-}
-
-.imagenes-portada{
     position: relative;
+    background-image: url(imagenes/portada2.webp);
+    background-size: cover;
+    width: 100%;
+    height: 50vh;
+
 }
 
-#imagen-portada, #filtro-oscuro{
-    width: 100%;
-    heigth: auto;
+.fondoOscuro{
     position: absolute;
     top: 0;
     left: 0;
-
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0,0.5);
+    z-index: 0;
 }
 
-#filtro-oscuro{
-    background-color: rgba(0, 0, 0, 0.336);
-    z-index: 2;
+.portada *{
+    padding: 0;
+    margin: 0;
 }
+
+.portada .contenido{
+    position: relative;
+    z-index: 1;
+    color: white;
+    height: 100%;
+}
+
+
+
+.portada .tituloPrincipal{
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+}
+
+.portada .tituloSecuandario{
+    color: black
+}
+
+
+
+
+
+
+
 
 
 
