--- a/index/indexStyle.css
+++ b/index/indexStyle.css
@@ -79,7 +79,7 @@ body{
 
 .banner{
     width: 100%;
-    background-image: url(/portada2.webp);
+    background-image: url("../imagenes/portada2.webp");
     background-size: cover;
     background-position: center;
     position: relative;
@@ -169,16 +169,17 @@ body{
 }
 
 .itemCarrucel img{
-    max-width: 80vw;
-    height: 50vw;
-    width: auto;
-    margin: 0 auto;
+    width: 80%;
+    
+    height: 80%;
+    
+    
 }
 
 .itemCarrucel h2{
     position: absolute;
     left: 20px;
-    
+    top: 80%;
 }
 
 .btnComprarCarrucel {
@@ -201,6 +202,7 @@ body{
 
 .contacto input, .contacto textarea{
     margin-top: 10px;
+    width: 80%;
 }
 
 .btnEnviarContacto{
@@ -227,7 +229,11 @@ body{
         padding: 15px;
         border-radius: 0;
         border: none;
+        height: 100%;
         
+    }
+    .esconder{
+        display: flex;
     }
 
     .lineaArribaTitulo:hover{
@@ -243,7 +249,7 @@ body{
         height: 0px;
     }
     .lineaArriba-logoPortada{
-        width: 60px;
+        width: 80px;
         position: absolute;
         left: 50%;
         top: -30px;
@@ -254,18 +260,20 @@ body{
         display: flex;
         width: 100%;
         justify-content: end;  
-        align-items: center;    
+        align-items: center;   
+        padding: 0; 
     }
     .lineaAbajoTitulo{
         background-color: black;
         width: auto;
         margin: 0;
         text-align: center;
-        font-size: 20px;
+        font-size: 25px;
         padding: 5px;
         border: none;
         color: white;
         margin-left: 30px;
+        height: 100%;
     }
 
     .lineaAbajoTitulo a{
@@ -279,13 +287,13 @@ body{
         color: black;
     }
     .logoCarritoBanner{
-        width: 30px;
+        width: 25px;
         filter: invert();
-        margin-top: 20px;
+        margin-top: 10px;
         display: inline;
-        margin-left: 10px;
+        margin-left: 30px;
         margin-right: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
     .banner{
         background-position: center;
@@ -352,17 +360,18 @@ body{
         height: 30vw;
         width: 50%;
         margin-left: 25%;
-        border-bottom: 1px solid black;
-        background-color: rgb(187, 187, 187);
+        border-bottom: none;
+        background-color: whitesmoke(255, 255, 255);
     }
     .btnComprarCarrucel {
         position: absolute;
         background-color: #317c27;
-        right: 10%;
+        right: 20%;
         border: none;
         color: white;
         padding: 20px;
-        font-size: 20px;
+        font-size: 30px;
+        top: 20%;
     }
     .btnCarrucel{
         position: absolute;
@@ -389,7 +398,21 @@ body{
         top:80%;
         font-size: 40px;
     }
+    .contacto input {
+        margin-top: 10px;
+        width: 30%;
+    }
 
+    
+
+    .contacto input, .contacto textarea{
+        height: 33px;
+        font-size: 20px;
+    }
+    .contacto textarea{
+        width: 50%;
+        height: 200px;   
+    }
 
 }
 
@@ -408,7 +431,9 @@ body{
         padding: 5px;
         margin-left: 10px;
     }
-    
+    .esconder{
+        width: 80%;
+    }
 
 
 
