--- a/public/index/indexStyle.css
+++ b/public/index/indexStyle.css
@@ -133,10 +133,12 @@ body{
     background-color: whitesmoke;
     padding-top: 50px;
     overflow: hidden;
+    background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, hsl(214,0%,11%),hsl(214,0%,11%));
+
     
 }
 .tituloPopulares{
-    color: black;
+    color: white;
     margin-left: 20px ;
     margin-top:0;
 }
@@ -180,6 +182,7 @@ body{
     position: absolute;
     left: 20px;
     top: 80%;
+    color: white;
 }
 
 .btnComprarCarrucel {
@@ -212,6 +215,33 @@ body{
     padding: 10px;
 
 }
+
+.sucursal *, .redSocial * {
+    color: white;
+
+}
+
+.referencias{
+    display: flex;
+    justify-content: space-between;
+}
+
+.sucursales, .redesSociales{
+    margin: 10px;
+}
+.sucursal, .redSocial{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 5px;
+}
+
+.tituloReferencias{
+    display: none;
+    color: white;
+}
+
+
 
 @media screen and (min-width: 769px){
     
@@ -352,7 +382,7 @@ body{
         width: 100vw;
         min-width: 100vw;
         position: relative;
-        background-color: #c9c9c9;
+
     }
     .itemCarrucel img{
         
@@ -412,6 +442,20 @@ body{
     .contacto textarea{
         width: 50%;
         height: 200px;   
+    }
+    .tituloReferencias{
+        display: block;
+        color: white;
+        font-size: 40px;
+
+    }
+    .referencias{
+        padding-left: 20%;
+        padding-right: 20%;
+
+    }
+    .sucursal *, .redSocial * {
+        font-size: 25px;
     }
 
 }
