avance en el front, modificacion del back

--- a/public/css/productoStyle.css
+++ b/public/css/productoStyle.css
@@ -8,46 +8,22 @@ body{
 }
 
 
-.lineaArriba{
-    margin-top: 10px;
-    display: flex;
-    justify-content: end;
-    border-bottom: 4px solid black;
-}
 
-.lineaArribaTitulo{
-    color: white;
-    font-size: 15px;
-    margin: 10px;
-    background-color: rgb(145, 145, 145);
-    padding: 10px;
-    border-radius: 5%;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-.lineaArriba-logoPortada{
-    width: 50px;
-    position: absolute;
-    left: 50%;
-    top: 10px;
-    transform: translateX(-50%);
-
-}
 
 .producto{
-    padding: 5px;
+
 }
 
-.imgContainer{
-    position: relative;
-    height: 50px;
-}
+
 .tituloProducto{
     font-size: 30px;
+    padding: 10px;
 }
 .imagenProducto{
-    width: 100%;
+    
     border: 1px solid black;
+    padding: 0px;
+    width: 100%;
 }
 .descrProducto{
     font-size: 20px;
@@ -78,6 +54,17 @@ body{
     padding: 10px;
 }
 
+.btnVolver{
+    margin: 10px;
+    margin-bottom: 100px;
+    background-color: #000000;
+    color: white;
+    border: 2px solid black;
+    border-radius: 5%;
+    font-size: 20px;
+    padding: 10px;
+}
+
 @media screen and (min-width: 769px){
     body{
         background-color: black;
@@ -85,42 +72,7 @@ body{
         margin: 0;
         font-family: Roboto, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
-    .lineaArriba{
-        margin-top: 0px;
-        display: flex;
-        justify-content: end;
-    }
     
-    .lineaArribaTitulo{
-        color: white;
-        font-size: 25px;
-        margin: 0px;
-        background-color: black;
-        padding: 15px;
-        border-radius: 0;
-        border: none;
-        
-    }
-    .lineaArribaTitulo:hover{
-        background-color: #fff;
-        color: black;
-    }
-    .imgContainer{
-        border-top: none;
-        border-bottom: none;
-        width: 10%;
-        position: relative;
-        margin-top: 0px;
-        height: 0px;
-    }
-    .lineaArriba-logoPortada{
-        width: 80px;
-        position: absolute;
-        left: 50%;
-        top: -30px;
-        transform: translateX(-50%);
-    
-    }
     .tituloProducto{
         font-size: 45px;
         color: white;
