--- a/public/css/catalogoStyle.css
+++ b/public/css/catalogoStyle.css
@@ -14,7 +14,12 @@ body{
     justify-content: end;
     border-bottom: 4px solid black;
 }
-
+#btnCerrarSesion{
+    background-color: #fff;
+    color: black;
+    display: none;
+    border: 1px solid rgba(0, 0, 0, 0.336);
+}
 .lineaArribaTitulo{
     color: white;
     font-size: 15px;
@@ -23,6 +28,7 @@ body{
     padding: 10px;
     border-radius: 5%;
     border: 1px solid rgba(255, 255, 255, 0.5);
+    cursor: pointer;
 }
 
 .lineaArriba-logoPortada{
@@ -32,6 +38,10 @@ body{
     top: 10px;
     transform: translateX(-50%);
 
+}
+
+#mensajeUserInSession{
+    display: none;
 }
 .imgContainer{
     position: relative;
@@ -48,6 +58,7 @@ body{
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-around;
+    background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, hsl(214,0%,11%),hsl(214,0%,11%));
 }
 
 .itemCatalogo{
@@ -59,7 +70,7 @@ body{
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: space-between;
     border: none;
     padding-bottom: 10px;
 }
@@ -124,10 +135,7 @@ body{
         border: none;
         
     }
-    .lineaArribaTitulo:hover{
-        background-color: #fff;
-        color: black;
-    }
+   
     .imgContainer{
         border-top: none;
         border-bottom: none;
@@ -193,6 +201,7 @@ body{
         width: 50%;
         height: 40px;
         margin-right: 20px;
+        font-size: 20px;
     }
     .btnComprar{
         background-color: #24a12e;
@@ -200,6 +209,8 @@ body{
         width: 50%;
         height: 40px;
         margin-right: 20px;
+        font-size: 20px;
+
         
     }
     .btnDetalles:hover, .btnComprar:hover{
