--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -23,6 +23,13 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
+#btnCerrarSesion{
+    background-color: #fff;
+    color: black;
+    display: none;
+
+}
+
 .lineaAbajoTitulo a{
     text-decoration: none;
     color: black;
@@ -65,6 +72,10 @@ body{
     padding: 5px;
     border: 1px solid rgba(128, 128, 128, 0.479);
     
+}
+
+#mensajeUserInSession{
+    display: none;
 }
 
 .logoCarritoBanner{
@@ -122,6 +133,27 @@ body{
     border-radius: 5px;
     transform: translateX(-50%);
     z-index: 2;
+
+}
+#quienesSomos{
+    background-color: whitesmoke;
+    padding-top: 20px;
+}
+.quienesSomosTitle{
+    padding: 15px;
+    margin: 0;
+}
+
+.quienesSomosParrafos{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-size: 15px;
+
+}
+.quienesSomosParrafo{
+    color: black;
+    padding: 10px;
 
 }
 
@@ -194,6 +226,36 @@ body{
     padding: 10px;
 }
 
+.influencers{
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    
+}
+.influencersTitle{
+    color: white;
+    margin: 15px;
+}
+
+.influencerContainer{
+    display: flex;
+    justify-content: space-around;
+}
+.influencer{
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.influencerFoto{
+    filter: invert();
+    width: 20vw;
+}
+.influencerName, .influencerInstagram{
+    color: white;
+    text-align: center;
+}
+
 .contacto{
     background-color: #9e9e9e;
     padding: 20px;
@@ -253,23 +315,20 @@ body{
     
     .lineaArribaTitulo{
         color: white;
-        font-size: 20px;
+        font-size:25px;
         margin: 0px;
         background-color: black;
         padding: 15px;
         border-radius: 0;
         border: none;
         height: 100%;
-        
+        margin-right: 10px;
+        cursor:pointer;
     }
     .esconder{
         display: flex;
     }
 
-    .lineaArribaTitulo:hover{
-        background-color: #fff;
-        color: black;
-    }
     .imgContainer{
         border-top: none;
         border-bottom: none;
@@ -304,6 +363,7 @@ body{
         color: white;
         margin-left: 30px;
         height: 100%;
+        cursor: pointer;
     }
 
     .lineaAbajoTitulo a{
@@ -324,6 +384,8 @@ body{
         margin-left: 30px;
         margin-right: 20px;
         margin-bottom: 15px;
+        cursor: pointer;
+        
     }
     .banner{
         background-position: center;
@@ -360,14 +422,39 @@ body{
         left: 70%;
         bottom: 10%;
         background-color: #317c27;
-        border: none;
+        border: 1px solid rgba(0, 0, 0, 0.233);
         color: white;
-        padding: 10px;
+        padding: 20px;
         border-radius: 5px;
         transform: none;
         z-index: 2;
-        width: 250px;
+        width: auto;
         font-size: 30px;
+        
+    }
+
+    #quienesSomos{
+        background-color: whitesmoke;
+        padding-top: 20px;
+        padding: 100px;
+    }
+
+    .quienesSomosTitle{
+        padding: 15px;
+        margin: 0;
+        font-size: 50px;
+        
+    }
+    .quienesSomosParrafo{
+        padding: 10px 150px;
+        font-size: 30px;        
+    }
+
+    .tituloPopulares{
+        color: white;
+        margin-left: 20px ;
+        margin-top:0;
+        font-size: 40px;
     }
     .productosPopulares{
     
@@ -432,7 +519,20 @@ body{
         margin-top: 10px;
         width: 30%;
     }
+    .contacto h2{
+        font-size: 40px;
+    }
 
+    .influencerName, .influencerInstagram{
+        color: white;
+        text-align: center;
+        font-size: 30px;
+    }
+    .influencersTitle{
+        color: white;
+        margin: 15px;
+        font-size: 40px;
+    }
     
 
     .contacto input, .contacto textarea{
