--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,589 +1,69 @@
 body{
-    background-color: black;
     padding: 0;
     margin: 0;
-    font-family: Roboto, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Poppins, sans-serif;   
+    font-size: 1rem;
     
 
 }
 
-.lineaArriba{
-    margin-top: 10px;
-    display: flex;
-    justify-content: end;
-}
-
-.lineaArribaTitulo{
-    color: white;
-    font-size: 15px;
-    margin: 10px;
-    background-color: rgb(145, 145, 145);
-    padding: 10px;
-    border-radius: 5%;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-}
-
-#btnCerrarSesion{
-    background-color: #fff;
-    color: black;
-    display: none;
-
-}
-#listaOrdenes{
-    display: none;
-}
-
-.lineaAbajoTitulo a{
-    text-decoration: none;
-    color: black;
-}
-
-.lineaArribaTitulo:active, .botonBanner:active, #switchMenu:active, #btnNext:active, #btnPrev:active{
-    background-color: black;
-    color: white;
-
-}
-
-.imgContainer{
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
-    width: 100%;
-    position: relative;
-    margin-top: 10px;
-    height: 50px;
-}
-
-.lineaArriba-logoPortada{
-    width: 50px;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
-
-}
-.lineaAbajo{
-    width: 100%;
-    
-}
-
-.lineaAbajoTitulo{
-    background-color: #fff;
-    width: 80%;
-    margin: 10px auto;
-    text-align: center;
-    font-size: 15px;
-    padding: 5px;
-    border: 1px solid rgba(128, 128, 128, 0.479);
-    
-}
-
-#mensajeUserInSession{
-    display: none;
-}
-
-.logoCarritoBanner{
-    width: 30px;
-    filter: invert();
-    margin-top: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-.banner{
-    width: 100%;
-    background-image: url("../imagenes/portada2.webp");
+#banner{
+    height: 70vh;
+    background-color: blue;
+    background-image: url('/imagenes/portada2.webp');
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     position: relative;
-    height: 300px;
-    
+
 }
 
-.fondoOscuroBanner{
-    background-color: rgba(0, 0, 0, 0.5);
+#bannerTitle{
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 10%;
+    bottom: 10%;
+    color: white;
+    font-size: 5rem;
+    background-color: rgba(0, 0, 0, 0.356);
+}
+#bannerTitle2{
+    position: absolute;
+    color: white;
+    right: 10%;
+    top: 5%;
+    font-size: 2rem;
+    text-align: right;
+    background-color: rgba(0, 0, 0, 0.301);
+    padding: 10px;
+}
+#bannerP{
+    position: absolute;
+    right: 10%;
+    top: 40%;
+    color: white;
+    font-size: 1.5rem;
+    text-align: right;
+
+}
+#btnBanner{
+    position: absolute;
+    bottom: 10%;
+    right: 10%;
+
+}
+.btnGreen{
+    padding: 15px;
+    background-color: rgb(25, 117, 25);
+    font-size: 2rem;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#bannerFilter{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
-
-}
-
-.tituloPrincipalBanner{
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    left: 50%;
-    text-align: center;
-    transform: translateX(-50%);
-    bottom: 0;
-}
-
-.tituloSecundarioBanner, .parrafoBanner{
-    display: none;
-}
-
-.botonBanner{
-    position: absolute;
-    left: 50%;
-    bottom: -20px;
-    background-color: #317c27;
-    border: none;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    transform: translateX(-50%);
-    z-index: 2;
-
-}
-#quienesSomos{
-    background-color: whitesmoke;
-    padding-top: 20px;
-}
-.quienesSomosTitle{
-    padding: 15px;
-    margin: 0;
-}
-
-.quienesSomosParrafos{
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    font-size: 15px;
-
-}
-.quienesSomosParrafo{
-    color: black;
-    padding: 10px;
-
-}
-
-.productosPopulares{
-    
-    width: 100%;
-    position: relative;
-    margin: auto;
-    background-color: whitesmoke;
-    padding-top: 50px;
-    overflow: hidden;
-    background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, hsl(214,0%,11%),hsl(214,0%,11%));
-
     
 }
-.tituloPopulares{
-    color: white;
-    margin-left: 20px ;
-    margin-top:0;
-}
-
-.carrucelPopulares{
-    display: flex;
-    margin: 0;
-    transition: transform 0.5s ease;
-}
-.itemCarrucel{
-    width: 100%;
-    min-width: 100%;
-    position: relative;
-}
-
-
-
-.btnCarrucel{
-    position: absolute;
-    transform: translateY(-50%);
-    top: 50%;
-}
-
-#btnNext{
-    right: 10px;
-}
-
-#btnPrev{
-    left: 10px;
-}
-
-.itemCarrucel img{
-    width: 80%;
-    
-    height: 80%;
-    
-    
-}
-
-.itemCarrucel h2{
-    position: absolute;
-    left: 20px;
-    top: 80%;
-    color: white;
-}
-
-.btnComprarCarrucel {
-    position: absolute;
-    background-color: #317c27;
-    right: 20px;
-    border: none;
-    color: white;
-    padding: 10px;
-}
-
-.influencers{
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    
-}
-.influencersTitle{
-    color: white;
-    margin: 15px;
-}
-
-.influencerContainer{
-    display: flex;
-    justify-content: space-around;
-}
-.influencer{
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.influencerFoto{
-    filter: invert();
-    width: 20vw;
-}
-.influencerName, .influencerInstagram{
-    color: white;
-    text-align: center;
-}
-
-.contacto{
-    background-color: #9e9e9e;
-    padding: 20px;
-}
-
-.tituloContacto{
-    margin-top: 0;
-}
-
-.contacto input, .contacto textarea{
-    margin-top: 10px;
-    width: 80%;
-}
-
-.btnEnviarContacto{
-    background-color: #317c27;
-    border: none;
-    color: #fff;
-    padding: 10px;
-
-}
-
-.sucursal *, .redSocial * {
-    color: white;
-
-}
-
-.referencias{
-    display: flex;
-    justify-content: space-between;
-}
-
-.sucursales, .redesSociales{
-    margin: 10px;
-}
-.sucursal, .redSocial{
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    gap: 5px;
-}
-
-.tituloReferencias{
-    display: none;
-    color: white;
-}
-
-
-
-@media screen and (min-width: 769px){
-    
-    .lineaArriba{
-        margin-top: 0px;
-        display: flex;
-        justify-content: end;
-    }
-    
-    .lineaArribaTitulo{
-        color: white;
-        font-size:25px;
-        margin: 0px;
-        background-color: black;
-        padding: 15px;
-        border-radius: 0;
-        border: none;
-        height: 100%;
-        margin-right: 10px;
-        cursor:pointer;
-    }
-    .esconder{
-        display: flex;
-    }
-
-    .imgContainer{
-        border-top: none;
-        border-bottom: none;
-        width: 10%;
-        position: relative;
-        margin-top: 0px;
-        height: 0px;
-    }
-    .lineaArriba-logoPortada{
-        width: 80px;
-        position: absolute;
-        left: 50%;
-        top: -30px;
-        transform: translateX(-50%);
-    
-    }
-    .lineaAbajo{
-        display: flex;
-        width: 100%;
-        justify-content: end;  
-        align-items: center;   
-        padding: 0; 
-    }
-    .lineaAbajoTitulo{
-        background-color: black;
-        width: auto;
-        margin: 0;
-        text-align: center;
-        font-size: 25px;
-        padding: 5px;
-        border: none;
-        color: white;
-        margin-left: 30px;
-        height: 100%;
-        cursor: pointer;
-    }
-
-    .lineaAbajoTitulo a{
-        color: white;
-    }
-    #switchMenu{
-        display: none;
-    }
-    .lineaAbajoTitulo:hover, .lineaAbajoTitulo a:hover{
-        background-color: #fff;
-        color: black;
-    }
-    .logoCarritoBanner{
-        width: 25px;
-        filter: invert();
-        margin-top: 10px;
-        display: inline;
-        margin-left: 30px;
-        margin-right: 20px;
-        margin-bottom: 15px;
-        cursor: pointer;
-        
-    }
-    .banner{
-        background-position: center;
-        position: relative;
-        height: 800px;
-        
-    }
-    .tituloPrincipalBanner{
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        left: 30px;
-        text-align: left;
-        transform: translateX(0);
-        bottom: 0;
-        font-size: 80px;
-    }
-    .tituloSecundarioBanner, .parrafoBanner{
-        display: block;
-        position: absolute;
-        top: 10%;
-        color: white;
-        font-size: 40px;
-        right: 10%;
-        text-align: right;
-    }
-    .parrafoBanner{
-        font-size: 35px;
-        color: #9e9e9e;
-        top: 40%;
-    }
-    .botonBanner{
-        position: absolute;
-        left: 70%;
-        bottom: 10%;
-        background-color: #317c27;
-        border: 1px solid rgba(0, 0, 0, 0.233);
-        color: white;
-        padding: 20px;
-        border-radius: 5px;
-        transform: none;
-        z-index: 2;
-        width: auto;
-        font-size: 30px;
-        
-    }
-
-    #quienesSomos{
-        background-color: whitesmoke;
-        padding-top: 20px;
-        padding: 100px;
-    }
-
-    .quienesSomosTitle{
-        padding: 15px;
-        margin: 0;
-        font-size: 50px;
-        
-    }
-    .quienesSomosParrafo{
-        padding: 10px 150px;
-        font-size: 30px;        
-    }
-
-    .tituloPopulares{
-        color: white;
-        margin-left: 20px ;
-        margin-top:0;
-        font-size: 40px;
-    }
-    .productosPopulares{
-    
-        width: 100%;
-        position: relative;
-        margin: 0;
-        background-color: whitesmoke;
-        padding-top: 50px;
-        overflow: hidden;
-    }
-    .itemCarrucel{
-        width: 100vw;
-        min-width: 100vw;
-        position: relative;
-
-    }
-    .itemCarrucel img{
-        
-        max-width: 50vw;
-        height: 30vw;
-        width: 50%;
-        margin-left: 25%;
-        border-bottom: none;
-        background-color: whitesmoke(255, 255, 255);
-    }
-    .btnComprarCarrucel {
-        position: absolute;
-        background-color: #317c27;
-        right: 20%;
-        border: none;
-        color: white;
-        padding: 20px;
-        font-size: 30px;
-        top: 20%;
-    }
-    .btnCarrucel{
-        position: absolute;
-        transform: translateY(-50%);
-        top: 50%;
-        font-size: 40px;
-        background-color: black;
-        color:white;
-    }
-    
-    #btnNext{
-        right: 20px;
-    }
-    
-    #btnPrev{
-        left: 20px;
-    }
-    
-    
-    .itemCarrucel h2{
-        position: absolute;
-        left: 20px;
-        z-index: 2;
-        top:80%;
-        font-size: 40px;
-    }
-    .contacto input {
-        margin-top: 10px;
-        width: 30%;
-    }
-    .contacto h2{
-        font-size: 40px;
-    }
-
-    .influencerName, .influencerInstagram{
-        color: white;
-        text-align: center;
-        font-size: 30px;
-    }
-    .influencersTitle{
-        color: white;
-        margin: 15px;
-        font-size: 40px;
-    }
-    
-
-    .contacto input, .contacto textarea{
-        height: 33px;
-        font-size: 20px;
-    }
-    .contacto textarea{
-        width: 50%;
-        height: 200px;   
-    }
-    .tituloReferencias{
-        display: block;
-        color: white;
-        font-size: 40px;
-
-    }
-    .referencias{
-        padding-left: 20%;
-        padding-right: 20%;
-
-    }
-    .sucursal *, .redSocial * {
-        font-size: 25px;
-    }
-
-}
-
-@media screen and (480px < width < 769px){
-
-    #switchMenu{
-        display: none;
-    }
-    .lineaAbajo{
-        display: flex;
-        width: 100%;
-        justify-content: end;  
-        align-items: center;    
-    }
-    .logoCarritoBanner{
-        padding: 5px;
-        margin-left: 10px;
-    }
-    .esconder{
-        width: 80%;
-    }
-
-
-
-
-}
-
